# snap

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Containerfile  LICENSE  README.md  build.sh  run.sh
assets/: style.css
html/: index.html  snap.html
src/: main.rs
templates/: base.html  new.html  view.html
